# FIBEP-JSON-Python-Interpreter

./: .pypirc  LICENSE  README.md  pyproject.toml
src/: __main__ .py  fibep_interpreter.py  fibep_validator.py
src/fibepjson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
