[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "fibepjson"
version = "0.2"
authors = [
  { name="Carlos Alfredo Diaz", email="yo@carlosdiaz.com.ar" },
]
description = "Package to encode and decode JSON files with the standard exchange format of the Federation International de Bureaux d'Extraits de Presse."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://dataexchange.fibep.info/"
"Bug Tracker" = "https://github.com/arankwende/FIBEP-JSON-Interpreter"